--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML>
 {% load static %}
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -12,24 +12,24 @@
 
 <title>Website title - bootstrap alistyle html template</title>
 
-<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+<link href="{%  static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
 
 <!-- jQuery -->
-<script src="js/jquery-2.0.0.min.js" type="text/javascript"></script>
+<script src="{%  static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
 
 <!-- Bootstrap4 files-->
-<script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
-<link href="css/bootstrap.css?v=2.0" rel="stylesheet" type="text/css"/>
+<script src="{%  static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
+<link href="{%  static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css"/>
 
 <!-- Font awesome 5 -->
-<link href="fonts/fontawesome/css/all.min.css?v=2.0" type="text/css" rel="stylesheet">
+<link href="{%  static 'fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
 
 <!-- custom style -->
-<link href="css/ui.css?v=2.0" rel="stylesheet" type="text/css"/>
-<link href="css/responsive.css?v=2.0" rel="stylesheet" type="text/css" />
+<link href="{%  static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{%  static 'css/responsive.css' %}" rel="stylesheet" type="text/css" />
 
 <!-- custom javascript -->
-<script src="js/script.js?v=2.0" type="text/javascript"></script>
+<script src="{%  static 'js/script.js' %}" type="text/javascript"></script>
 
 </head>
 <body>
